force-app/main/default/objects/Referral__c/fields/ReferringAccountParent__c.field-meta.xml
<CustomField>
    <fullName>ReferringAccountParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this is from a referral relationship, this is a link to the parent account. Ex if this is a referral for a Citizens bank branch, the Citizens parent record would go here.</description>
    <inlineHelpText>If this is from a referral relationship, this is a link to the parent account.</inlineHelpText>
    <label>Referring Account Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referrals (Referring Account Parent)</relationshipLabel>
    <relationshipName>ReferralsParent</relationshipName>
    <type>Lookup</type>
</CustomField>