force-app/main/default/objects/Referral__c/fields/ReferringLineItemId__c.field-meta.xml
<CustomField>
    <fullName>ReferringLineItemId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Id of the opportunity line item for this specific referral.</inlineHelpText>
    <label>Referring Line Item Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>