force-app/main/default/objects/Referral__c/fields/Reject_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reject_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If approval is rejected, the comments are moved here.</inlineHelpText>
    <label>Reject Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>