force-app/main/default/objects/Referral__c/fields/Reward_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reward_Amount__c</fullName>
    <description>passed in from AR - reward earned on a referral</description>
    <label>Reward Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$200</fullName>
            </value>
            <value>
                <fullName>$500</fullName>
            </value>
            <value>
                <fullName>Free Payroll</fullName>
            </value>
            <value>
                <fullName>Already Earned Free Payroll</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>