force-app/main/default/objects/Referral__c/fields/SecondaryLeadSource__c.field-meta.xml
<CustomField>
    <fullName>SecondaryLeadSource__c</fullName>
    <formula>IF (NOT(ISBLANK(PartnerDetail__c ))
    , PartnerDetail__r.SecondaryLeadSource__c 
    , IF (NOT(ISBLANK( Referral_Account__c ))
          , IF (NOT(ISBLANK( Referral_Account__r.Parent_Referral_Account__c ))
                 , Referral_Account__r.Parent_Referral_Account__r.SecondaryLeadSource__c
                 , Referral_Account__r.SecondaryLeadSource__c 
            )
          ,&quot;&quot;)
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Lead Source</label>
    <type>Text</type>
</CustomField>