force-app/main/default/objects/Referral__c/fields/Selected_Account__c.field-meta.xml
<CustomField>
    <fullName>Selected_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Account selected by the user on Submit Referral NSS screen</description>
    <inlineHelpText>This is the Account selected by the user on Submit Referral NSS screen</inlineHelpText>
    <label>Selected Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referrals (Selected Account)</relationshipLabel>
    <relationshipName>Referrals2</relationshipName>
    <type>Lookup</type>
</CustomField>