force-app/main/default/objects/Referral__c/fields/Selected_Contact__c.field-meta.xml
<CustomField>
    <fullName>Selected_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Contact selected by the user on Submit Referral NSS screen</description>
    <inlineHelpText>This is the Contact selected by the user on Submit Referral NSS screen</inlineHelpText>
    <label>Selected Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Selected_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referrals (Selected Contact)</relationshipLabel>
    <relationshipName>Referrals3</relationshipName>
    <type>Lookup</type>
</CustomField>