force-app/main/default/objects/Referral__c/fields/Selling_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Selling_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Opportunity for the Selling Rep.</inlineHelpText>
    <label>Selling Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Referrals-Selling</relationshipLabel>
    <relationshipName>Selling_Opps</relationshipName>
    <type>Lookup</type>
</CustomField>