force-app/main/default/objects/Referral__c/fields/SellingLeadSource__c.field-meta.xml
<CustomField>
    <fullName>SellingLeadSource__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Lead Source for the Selling Opportunity</inlineHelpText>
    <label>Selling Lead Source</label>
    <length>128</length>
    <type>Text</type>
</CustomField>