force-app/main/default/objects/Referral__c/fields/SellingOppInfo__c.field-meta.xml
<CustomField>
    <fullName>SellingOppInfo__c</fullName>
    <inlineHelpText>Information on the Selling Opportunity</inlineHelpText>
    <label>Selling Opp Info</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Created Successfully</fullName>
            </value>
            <value>
                <fullName>Email Sent</fullName>
            </value>
            <value>
                <fullName>Reused Existing - Dupe 70+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>