force-app/main/default/objects/Referral__c/fields/Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email?</label>
    <type>Checkbox</type>
</CustomField>