force-app/main/default/objects/Referral__c/fields/SetOwnerHoldout__c.field-meta.xml
<CustomField>
    <fullName>SetOwnerHoldout__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the owner is set on related objects, set the hold out field (if matching hold out definition can be found - based on the Destination on the Partner Referral matching up to the HoldOut Expiration Dates custom setting).</inlineHelpText>
    <label>Set Owner Holdout</label>
    <type>Checkbox</type>
</CustomField>