force-app/main/default/objects/Referral__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <formula>PartnerReferral__r.Source__c</formula>
    <label>Source</label>
    <type>Text</type>
</CustomField>