force-app/main/default/objects/Referral__c/fields/SourceContact__c.field-meta.xml
<CustomField>
    <fullName>SourceContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Prospect-Client Contact record that is the contact for this referral.</inlineHelpText>
    <label>Source Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Contact should be linked to the Prospect-Client</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referrals (Source Contact)</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>