force-app/main/default/objects/Referral__c/fields/SourceLead__c.field-meta.xml
<CustomField>
    <fullName>SourceLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Lead that identifies the contact. This should only be a temporary relationship - conversion should move it to the contact.</inlineHelpText>
    <label>Source Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>