force-app/main/default/objects/Referral__c/fields/Started_From__c.field-meta.xml
<CustomField>
    <fullName>Started_From__c</fullName>
    <description>on which screen did user click Submit Referral</description>
    <label>Started From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Referral Contact</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>