force-app/main/default/objects/Referral__c/fields/SubmitDate__c.field-meta.xml
<CustomField>
    <fullName>SubmitDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date this record was submitted (for a referral/lead/et al).</inlineHelpText>
    <label>Submit Date</label>
    <type>Date</type>
</CustomField>