force-app/main/default/objects/Referral__c/fields/SubmitFormComplete__c.field-meta.xml
<CustomField>
    <fullName>SubmitFormComplete__c</fullName>
    <description>The end date/time for submitting the form</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Submit Form Complete</label>
    <type>DateTime</type>
</CustomField>