force-app/main/default/objects/Referral__c/fields/TAL_Date_Exited__c.field-meta.xml
<CustomField>
    <fullName>TAL_Date_Exited__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TAL - Date Exited</label>
    <type>DateTime</type>
</CustomField>