force-app/main/default/objects/Referral__c/fields/TAL_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>TAL_Lead_Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TAL - Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>