force-app/main/default/objects/Referral__c/fields/TAL_Marketo_Lead_Rating__c.field-meta.xml
<CustomField>
    <fullName>TAL_Marketo_Lead_Rating__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TAL - Marketo Lead Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>