force-app/main/default/objects/Referral__c/fields/TeamMemberId__c.field-meta.xml
<CustomField>
    <fullName>TeamMemberId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The ID of the opportunity team member created as a result of this referral</inlineHelpText>
    <label>Team Member Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>