force-app/main/default/objects/Referral__c/fields/Term_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_Start_Date__c</fullName>
    <description>initially calculated based on enrollment date into Amplifinity reward program, after opportunity is marked Sold it will be passed in from AR - the start of a specified term in which referrals will qualify</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Term Start Date</label>
    <type>Date</type>
</CustomField>