force-app/main/default/objects/Referral__c/fields/TimeZoneAbbrev__c.field-meta.xml
<CustomField>
    <fullName>TimeZoneAbbrev__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The abbreviation of the time zone</inlineHelpText>
    <label>Time Zone Abbrev</label>
    <length>20</length>
    <type>Text</type>
</CustomField>