force-app/main/default/objects/Referral__c/fields/TimeZoneName__c.field-meta.xml
<CustomField>
    <fullName>TimeZoneName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the time zone</inlineHelpText>
    <label>Time Zone Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>