force-app/main/default/objects/Referral__c/fields/TimeZoneOffset__c.field-meta.xml
<CustomField>
    <fullName>TimeZoneOffset__c</fullName>
    <inlineHelpText>The number of hours offset from the running user&apos;s time zone</inlineHelpText>
    <label>Time Zone Offset</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>