force-app/main/default/objects/Referral__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If the Contact is also a User, a link to the User record.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Internal_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>