force-app/main/default/objects/Referral__c/fields/ZipSegment__c.field-meta.xml
<CustomField>
    <fullName>ZipSegment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zip Segment</label>
    <length>40</length>
    <type>Text</type>
</CustomField>