force-app/main/default/objects/Referral__c/listViews/ALBANY_Referral1.listView-meta.xml
<ListView>
    <fullName>ALBANY_Referral1</fullName>
    <filterScope>Queue</filterScope>
    <label>ALBANY</label>
    <queue>ALBANY</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>