force-app/main/default/objects/Referral__c/listViews/All_Referrals.listView-meta.xml
<ListView>
    <fullName>All_Referrals</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>PartnerType__c</columns>
    <columns>Referring_Opportunity__c</columns>
    <columns>Selling_Opportunity__c</columns>
    <columns>Referring_Lead_Source__c</columns>
    <columns>SellingLeadSource__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Referrals</label>
</ListView>