force-app/main/default/objects/Referral__c/listViews/ATLANTA_EAST_Referral.listView-meta.xml
<ListView>
    <fullName>ATLANTA_EAST_Referral</fullName>
    <filterScope>Queue</filterScope>
    <label>ATLANTA EAST</label>
    <queue>ATLANTA_EAST</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>