force-app/main/default/objects/Referral__c/listViews/AUBURN_Referral.listView-meta.xml
<ListView>
    <fullName>AUBURN_Referral</fullName>
    <filterScope>Queue</filterScope>
    <label>AUBURN</label>
    <queue>AUBURN</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>