force-app/main/default/objects/Referral__c/listViews/BALTIMORE_Referral.listView-meta.xml
<ListView>
    <fullName>BALTIMORE_Referral</fullName>
    <filterScope>Queue</filterScope>
    <label>BALTIMORE</label>
    <queue>BALTIMORE</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>