force-app/main/default/objects/Referral__c/listViews/BANK_CENTRIC_NOR_CAL_Referral.listView-meta.xml
<ListView>
    <fullName>BANK_CENTRIC_NOR_CAL_Referral</fullName>
    <filterScope>Queue</filterScope>
    <label>BANK CENTRIC NOR CAL</label>
    <queue>BANK_CENTRIC_NOR_CAL</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>