force-app/main/default/objects/Referral__c/listViews/BANK_CENTRIC_NYC_Referral.listView-meta.xml
<ListView>
    <fullName>BANK_CENTRIC_NYC_Referral</fullName>
    <filterScope>Queue</filterScope>
    <label>BANK CENTRIC - NYC</label>
    <queue>BANK_CENTRIC_NYC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>