force-app/main/default/objects/Referral__c/listViews/BOSTON_WEST_Referral.listView-meta.xml
<ListView>
    <fullName>BOSTON_WEST_Referral</fullName>
    <filterScope>Queue</filterScope>
    <label>BOSTON WEST</label>
    <queue>BOSTON_WEST</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>