force-app/main/default/objects/Referral__c/listViews/CENTRAL_CALIFORNIA_Referral.listView-meta.xml
<ListView>
    <fullName>CENTRAL_CALIFORNIA_Referral</fullName>
    <filterScope>Queue</filterScope>
    <label>CENTRAL CALIFORNIA</label>
    <queue>CENTRAL_CALIFORNIA</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>