force-app/main/default/objects/Referral__c/listViews/CENTRAL_MICHIGAN_Referral.listView-meta.xml
<ListView>
    <fullName>CENTRAL_MICHIGAN_Referral</fullName>
    <filterScope>Queue</filterScope>
    <label>CENTRAL MICHIGAN</label>
    <queue>CENTRAL_MICHIGAN</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>