force-app/main/default/objects/Referral__c/listViews/CHARLOTTE_NORTH_Referral.listView-meta.xml
<ListView>
    <fullName>CHARLOTTE_NORTH_Referral</fullName>
    <filterScope>Queue</filterScope>
    <label>CHARLOTTE NORTH</label>
    <queue>CHARLOTTE_NORTH</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>