force-app/main/default/objects/Referral__c/listViews/CHARLOTTE_SOUTH_Referral.listView-meta.xml
<ListView>
    <fullName>CHARLOTTE_SOUTH_Referral</fullName>
    <filterScope>Queue</filterScope>
    <label>CHARLOTTE SOUTH</label>
    <queue>CHARLOTTE_SOUTH</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>