force-app/main/default/objects/Referral__c/listViews/CHERRY_HILL_NORTH_Referral.listView-meta.xml
<ListView>
    <fullName>CHERRY_HILL_NORTH_Referral</fullName>
    <filterScope>Queue</filterScope>
    <label>CHERRY HILL NORTH</label>
    <queue>CHERRY_HILL_NORTH</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>