force-app/main/default/objects/Referral__c/listViews/CHERRY_HILL_SOUTH_Referral.listView-meta.xml
<ListView>
    <fullName>CHERRY_HILL_SOUTH_Referral</fullName>
    <filterScope>Queue</filterScope>
    <label>CHERRY HILL SOUTH</label>
    <queue>CHERRY_HILL_SOUTH</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>