force-app/main/default/objects/Referral__c/listViews/CHICAGO_CENTRAL_Referral.listView-meta.xml
<ListView>
    <fullName>CHICAGO_CENTRAL_Referral</fullName>
    <filterScope>Queue</filterScope>
    <label>CHICAGO CENTRAL</label>
    <queue>CHICAGO_CENTRAL</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>